fix image spacing

--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -45,6 +45,7 @@ img.left {
   margin: 10px;
   display: block;
   max-width: 100%;
+  padding: 30px;
 }
 .text>div {
   margin: 0 0;
